# prompt-regress

./: LICENSE.txt  README.md  main.py  prompt-regress.yml  pyproject.toml
examples/: examples.md
prompt_regress/: cli.py  core.py  test.py
prompt_regress/metrics/: __init__.py  similarity.py
prompt_regress/models/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
tests/: test_cli.py  test_core.py  test_metrics.py  test_models.py
